GNOME Bugzilla – Bug 751123
jaw_table_cell_get_position is not implemented
Last modified: 2015-06-17 17:05:18 UTC
This method would be in jawtablecell.c with a corresponding getPosition function in AtkTableCell in order to retrieves the tabular position of the cell.
Created attachment 305497 [details] [review] Patch to address problem